--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,16 +11,6 @@ if (flutterRoot == null) {
     throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
-def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
-if (flutterVersionCode == null) {
-    flutterVersionCode = '1'
-}
-
-def flutterVersionName = localProperties.getProperty('flutter.versionName')
-if (flutterVersionName == null) {
-    flutterVersionName = '1.0'
-}
-
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
@@ -42,12 +32,19 @@ android {
         disable 'InvalidPackage'
     }
 
+    def versionMajor = 1  // incompatible API changes or any breaking changes
+    def versionMinor = 1 // functionality improvements that is backwards-compatible
+    def versionPatch = 0 // bug fixes that is backwards-compatible
+    def versionBuild = 0 // changes that is not a bug or a functionality
+
     defaultConfig {
         applicationId "com.cardanmarketing.signtrackerapp"
         minSdkVersion 18
         targetSdkVersion 29
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+
+        versionCode versionMajor * 10000 + versionMinor * 1000 + versionPatch * 100 + versionBuild
+        versionName "${versionMajor}.${versionMinor}.${versionPatch}"
+        archivesBaseName = "signtracker-v${versionName}"
     }
 
     signingConfigs {
