--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,6 +11,16 @@ if (flutterRoot == null) {
     throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
+def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
+if (flutterVersionCode == null) {
+    throw new GradleException("versionCode not found. Define flutter.versionCode in the local.properties file.")
+}
+
+def flutterVersionName = localProperties.getProperty('flutter.versionName')
+if (flutterVersionName == null) {
+    throw new GradleException("versionName not found. Define flutter.versionName in the local.properties file.")
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
@@ -32,18 +42,13 @@ android {
         disable 'InvalidPackage'
     }
 
-    def versionMajor = 1  // incompatible API changes or any breaking changes
-    def versionMinor = 2 // functionality improvements that is backwards-compatible
-    def versionPatch = 4 // bug fixes that is backwards-compatible
-    def versionBuild = 0 // changes that is not a bug or a functionality
-
     defaultConfig {
         applicationId "com.cardanmarketing.signtrackerapp"
         minSdkVersion 18
         targetSdkVersion 29
 
-        versionCode versionMajor * 10000 + versionMinor * 1000 + versionPatch * 100 + versionBuild
-        versionName "${versionMajor}.${versionMinor}.${versionPatch}"
+        versionCode flutterVersionCode.toInteger()
+        versionName flutterVersionName
         archivesBaseName = "signtracker-v${versionName}"
     }
 
