Add app flavors

--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -2,35 +2,33 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>614080365239-jpsks6n694cju1andjgmhaj6p1dm97me.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.614080365239-jpsks6n694cju1andjgmhaj6p1dm97me</string>
-	<key>API_KEY</key>
-	<string>AIzaSyA6XeiLdOBeYSz2sItq4AO0c9QsocneRyI</string>
-	<key>GCM_SENDER_ID</key>
-	<string>614080365239</string>
-	<key>PLIST_VERSION</key>
-	<string>1</string>
-	<key>BUNDLE_ID</key>
-	<string>com.cardanmarketing.signtracker</string>
-	<key>PROJECT_ID</key>
-	<string>thesigntracker</string>
-	<key>STORAGE_BUCKET</key>
-	<string>thesigntracker.appspot.com</string>
-	<key>IS_ADS_ENABLED</key>
-	<false></false>
-	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
-	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
-	<key>IS_GCM_ENABLED</key>
-	<true></true>
-	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
-	<key>GOOGLE_APP_ID</key>
-	<string>1:614080365239:ios:98596bb10461eb5b8f4332</string>
-	<key>DATABASE_URL</key>
-	<string>https://thesigntracker.firebaseio.com</string>
+    <key>CLIENT_ID</key>
+    <string>581385481417-dmcl78v8kklriv0qbokfkasjodsqgkjo.apps.googleusercontent.com</string>
+    <key>REVERSED_CLIENT_ID</key>
+    <string>com.googleusercontent.apps.581385481417-dmcl78v8kklriv0qbokfkasjodsqgkjo</string>
+    <key>API_KEY</key>
+    <string>AIzaSyCzpUmTZzwXqOkIpKJjE_X_Yn7TzO708iw</string>
+    <key>GCM_SENDER_ID</key>
+    <string>581385481417</string>
+    <key>PLIST_VERSION</key>
+    <string>1</string>
+    <key>BUNDLE_ID</key>
+    <string>com.cardanmarketing.signtracker</string>
+    <key>PROJECT_ID</key>
+    <string>thesigntracker-f865a</string>
+    <key>STORAGE_BUCKET</key>
+    <string>thesigntracker-f865a.appspot.com</string>
+    <key>IS_ADS_ENABLED</key>
+    <false></false>
+    <key>IS_ANALYTICS_ENABLED</key>
+    <false></false>
+    <key>IS_APPINVITE_ENABLED</key>
+    <true></true>
+    <key>IS_GCM_ENABLED</key>
+    <true></true>
+    <key>IS_SIGNIN_ENABLED</key>
+    <true></true>
+    <key>GOOGLE_APP_ID</key>
+    <string>1:581385481417:ios:5f823cdffde935e343f118</string>
 </dict>
 </plist>
