--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^0.4.0+9
   bloc: ^3.0.0
   flutter_bloc: ^3.1.0
   meta: ^1.1.8
