--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,8 +75,14 @@ android {
         dev {
             dimension "app"
             resValue "string", "app_name", "TheSignTracker Dev"
-            versionNameSuffix "-dev"
+            versionNameSuffix ".dev"
             applicationId "com.cardanmarketing.signtrackerapp.dev"
+        }
+        stg {
+            dimension "app"
+            resValue "string", "app_name", "TheSignTracker Stg"
+            versionNameSuffix ".stg"
+            applicationId "com.cardanmarketing.signtrackerapp.stg"
         }
         prod {
             dimension "app"
