--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,50 +10,52 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^0.4.0+9
+  #firebase_core: ^0.4.2+2
+  firebase_core: ^1.16.0
+  firebase_analytics: ^9.1.7
   bloc: ^3.0.0
   flutter_bloc: ^3.1.0
-  meta: ^1.1.8
+  meta: ^1.7.0
   equatable: ^0.2.0
-  google_maps_flutter: ^2.1.1
+  google_maps_flutter: ^2.1.3
   location: 4.3.0
-  dio: ^4.0.4
+  dio: ^4.0.6
   dio_http_cache: ^0.3.0
   built_collection: ^5.1.1
-  built_value: ^8.1.4
-  intl: ^0.16.1
-  flutter_secure_storage: ^3.3.1+1
-  image_picker: ^0.8.4+7
+  built_value: ^8.2.0
+  intl: ^0.17.0
+  flutter_secure_storage: ^5.0.2
+  image_picker: ^0.8.5
   progress_dialog: ^1.2.3
   flutter_slidable: ^0.5.4
-  jiffy: ^2.2.0
+  jiffy: ^5.0.0
   keyboard_actions: ^3.2.1
   smart_select: ^4.3.2
   flutter_svg: ^1.0.0
-  rflutter_alert: ^1.0.3
-  flushbar: 1.10.2
+  rflutter_alert: ^2.0.4
+  flushbar: ^1.10.4
   rounded_loading_button: ^1.0.4
-  google_fonts: ^2.0.0
-  onesignal_flutter: ^2.6.1
-  flutter_device_type: ^0.2.0
-  photo_view: ^0.9.2
-  url_launcher: ^6.0.0
-  grouped_list: ^2.3.0
-  path_provider: ^2.0.8
+  google_fonts: ^2.3.1
+  onesignal_flutter: ^3.3.0
+  flutter_device_type: ^0.4.0
+  photo_view: ^0.13.0
+  url_launcher: ^6.0.20
+  grouped_list: ^4.2.0
+  path_provider: ^2.0.9
   http: ^0.13.4
-  badges: ^1.1.1
-  uuid: ^3.0.0
+  badges: ^2.0.2
+  uuid: ^3.0.6
   dropdown_formfield: ^0.1.2
   cached_network_image: ^2.1.0+1
   shared_preferences: ^2.0.6
   flutter_ringtone_player: ^3.0.0
-  uni_links: ^0.4.0
+  uni_links: ^0.5.1
   firebase_dynamic_links: ^0.5.0+11
-  file_picker: ^3.0.0
-  filesize: ^1.0.4
-  responsive_framework: ^0.0.7
-  cupertino_icons: ^1.0.0
-  package_info_plus: ^1.3.0
+  file_picker: ^4.5.1
+  filesize: ^2.0.1
+  responsive_framework: ^0.1.7
+  cupertino_icons: ^1.0.4
+  package_info_plus: ^1.4.2
   latlong2: ^0.8.1
 
 dev_dependencies:
