--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,16 +17,17 @@ dependencies:
   flutter_bloc: ^3.1.0
   meta: ^1.7.0
   equatable: ^0.2.6
-  google_maps_flutter: ^2.1.3
-  location: 4.3.0
+  google_maps_flutter: ^2.1.5
+  location: 4.4.0
   dio: ^4.0.6
   dio_http_cache: ^0.3.0
   built_collection: ^5.1.1
   built_value: ^8.2.0
   intl: ^0.17.0
   flutter_secure_storage: ^5.0.2
-  image_picker: ^0.8.5
-  progress_dialog: ^1.2.3
+  image_picker: ^0.8.5+3
+  #progress_dialog: ^1.2.3
+  progress_dialog_null_safe: ^1.0.7
   flutter_slidable: ^1.2.0
   jiffy: ^5.0.0
   keyboard_actions: ^3.2.1
@@ -42,20 +43,20 @@ dependencies:
   photo_view: ^0.13.0
   url_launcher: ^6.0.20
   grouped_list: ^4.2.0
-  path_provider: ^2.0.9
+  path_provider: ^2.0.10
   http: ^0.13.4
   badges: ^2.0.2
   uuid: ^3.0.6
   dropdown_formfield: ^0.1.2
   cached_network_image: ^2.5.1
   shared_preferences: ^2.0.6
-  flutter_ringtone_player: ^3.0.0
+  flutter_ringtone_player: ^3.2.0
   uni_links: ^0.5.1
   #firebase_dynamic_links: ^0.5.0+11
   firebase_dynamic_links: ^2.0.8
   file_picker: ^4.5.1
   filesize: ^2.0.1
-  responsive_framework: ^0.1.7
+  responsive_framework: ^0.1.8
   cupertino_icons: ^1.0.4
   package_info_plus: ^1.4.2
   latlong2: ^0.8.1
@@ -76,3 +77,6 @@ flutter:
     - assets/countries_regions.json
     - assets/companies.json
     - google_fonts/
+
+module:
+  androidX: true # Add this line.
