--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -2,33 +2,33 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>CLIENT_ID</key>
-    <string>581385481417-dmcl78v8kklriv0qbokfkasjodsqgkjo.apps.googleusercontent.com</string>
-    <key>REVERSED_CLIENT_ID</key>
-    <string>com.googleusercontent.apps.581385481417-dmcl78v8kklriv0qbokfkasjodsqgkjo</string>
-    <key>API_KEY</key>
-    <string>AIzaSyCzpUmTZzwXqOkIpKJjE_X_Yn7TzO708iw</string>
-    <key>GCM_SENDER_ID</key>
-    <string>581385481417</string>
-    <key>PLIST_VERSION</key>
-    <string>1</string>
-    <key>BUNDLE_ID</key>
-    <string>com.cardanmarketing.signtracker</string>
-    <key>PROJECT_ID</key>
-    <string>thesigntracker-f865a</string>
-    <key>STORAGE_BUCKET</key>
-    <string>thesigntracker-f865a.appspot.com</string>
-    <key>IS_ADS_ENABLED</key>
-    <false></false>
-    <key>IS_ANALYTICS_ENABLED</key>
-    <false></false>
-    <key>IS_APPINVITE_ENABLED</key>
-    <true></true>
-    <key>IS_GCM_ENABLED</key>
-    <true></true>
-    <key>IS_SIGNIN_ENABLED</key>
-    <true></true>
-    <key>GOOGLE_APP_ID</key>
-    <string>1:581385481417:ios:5f823cdffde935e343f118</string>
+	<key>CLIENT_ID</key>
+	<string>437218980617-ca0jb528ihvs8tkijklia0b14tuco770.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.437218980617-ca0jb528ihvs8tkijklia0b14tuco770</string>
+	<key>API_KEY</key>
+	<string>AIzaSyD-RT_GNEECB4vtnesZ3GRoPQvOgBTOkMw</string>
+	<key>GCM_SENDER_ID</key>
+	<string>437218980617</string>
+	<key>PLIST_VERSION</key>
+	<string>1</string>
+	<key>BUNDLE_ID</key>
+	<string>com.cardanmarketing.signtrackerapp</string>
+	<key>PROJECT_ID</key>
+	<string>signtracker-cfe9c</string>
+	<key>STORAGE_BUCKET</key>
+	<string>signtracker-cfe9c.appspot.com</string>
+	<key>IS_ADS_ENABLED</key>
+	<false></false>
+	<key>IS_ANALYTICS_ENABLED</key>
+	<false></false>
+	<key>IS_APPINVITE_ENABLED</key>
+	<true></true>
+	<key>IS_GCM_ENABLED</key>
+	<true></true>
+	<key>IS_SIGNIN_ENABLED</key>
+	<true></true>
+	<key>GOOGLE_APP_ID</key>
+	<string>1:437218980617:ios:b2557f13206e6095c799d8</string>
 </dict>
 </plist>
