Sub project, use project plan template, worked on some UI color changes, Adjust setting page datetime format changed

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -30,7 +30,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>thesigntracker.online</string>
+			<string>signtrackerapp.page.link</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>http</string>
