--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   #firebase_core: ^0.4.2+2
-  firebase_core: ^1.16.0
+  firebase_core: ^1.17.1
   firebase_analytics: ^9.1.7
   bloc: ^3.0.0
   flutter_bloc: ^3.1.0
@@ -41,7 +41,7 @@ dependencies:
   onesignal_flutter: ^3.3.0
   flutter_device_type: ^0.4.0
   photo_view: ^0.13.0
-  url_launcher: ^6.0.20
+  url_launcher: ^6.1.3
   grouped_list: ^4.2.0
   path_provider: ^2.0.10
   http: ^0.13.4
@@ -52,14 +52,15 @@ dependencies:
   shared_preferences: ^2.0.6
   flutter_ringtone_player: ^3.2.0
   uni_links: ^0.5.1
-  #firebase_dynamic_links: ^0.5.0+11
-  firebase_dynamic_links: ^4.2.4
+  firebase_dynamic_links: ^0.5.0+11
+  #firebase_dynamic_links: ^4.2.5
   file_picker: ^4.5.1
   filesize: ^2.0.1
   responsive_framework: ^0.1.8
   cupertino_icons: ^1.0.4
   package_info_plus: ^1.4.2
   latlong2: ^0.8.1
+  lazy_load_scrollview: ^1.3.0
 
 dev_dependencies:
   flutter_test:
