--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   #firebase_core: ^0.4.2+2
-  firebase_core: ^1.17.1
-  firebase_analytics: ^9.1.7
+  firebase_core: ^1.19.2
+  firebase_analytics: ^9.2.0
   bloc: ^3.0.0
   flutter_bloc: ^3.1.0
   meta: ^1.7.0
@@ -52,8 +52,8 @@ dependencies:
   shared_preferences: ^2.0.6
   flutter_ringtone_player: ^3.2.0
   uni_links: ^0.5.1
-  firebase_dynamic_links: ^0.5.0+11
-  #firebase_dynamic_links: ^4.2.5
+  #firebase_dynamic_links: ^0.5.0+11
+  firebase_dynamic_links: ^4.3.2
   file_picker: ^4.5.1
   filesize: ^2.0.1
   responsive_framework: ^0.1.8
