--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,9 +65,9 @@ android {
     }
 
     buildTypes {
-        debug {
+       /* debug {
             signingConfig signingConfigs.debug
-        }
+        }*/
         release {
             signingConfig signingConfigs.release
         }
